--- a/newGizaClub/src/pages/home/home.html
+++ b/newGizaClub/src/pages/home/home.html
@@ -1,5 +1,8 @@
+
+<ion-content padding>
 <ion-tabs>
   <ion-tab  [root]="main" tabTitle="main" tabIcon="home"></ion-tab>
   <ion-tab [root]="news" tabTitle='news' tabIcon="home"></ion-tab>
   <ion-tab  [root]="interact" tabTitle="interact" tabIcon="home"></ion-tab>
 </ion-tabs>
+</ion-content>
