--- a/newGizaClub/src/pages/main/main.html
+++ b/newGizaClub/src/pages/main/main.html
@@ -5,10 +5,8 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-<ngsc-header [name]='name'></ngsc-header>
+  <ngsc-header [name]='name'></ngsc-header>
 </ion-header>
-
 <ion-content padding>
   
   <ion-scroll scrollY="true" style="height: 33%;">
@@ -54,7 +52,7 @@
 
 <ion-row class="notif-row">
     <ion-col col-8 class="notif-col">
-    <h3>sports</h3>
+    <h3>Sports</h3>
     </ion-col >
   <ion-col col-auto> 
     <button class="home-buttons" (click)="goToEvents()">view all >></button>
@@ -62,7 +60,7 @@
     </ion-row>
  <ion-slides  loop="true"  pager="true" parallax="true" style="height: 33%;">
     <ion-slide *ngFor="let slide of sports">
-      <img class="event-img" [src]="slide.imageUrl" (click)="goToEvent(slide)"/>
+      <img class="sports-image" [src]="slide.imageUrl" (click)="goToEvent(slide)"/>
     </ion-slide>
  </ion-slides>
 
