added : sports regestration & get news from server & added NGSC.jks for android production

--- a/newGizaClub/src/pages/codeverification/codeverification.html
+++ b/newGizaClub/src/pages/codeverification/codeverification.html
@@ -12,7 +12,7 @@
     </ion-col>
       
     <ion-col >
-     <ion-input  type="text"  [(ngModel)]="code" placeholder=" enter the code" name="code"></ion-input>
+     <ion-input  type="number"  [(ngModel)]="code" placeholder=" enter the code" name="code"></ion-input>
     </ion-col>
   </ion-row>
      <ion-row>
