--- a/newGizaClub/src/pages/order/order.html
+++ b/newGizaClub/src/pages/order/order.html
@@ -18,10 +18,10 @@
       Quantity
     </ion-col>
     <ion-col class="order-header-col">
-      item Price
+      Item Price
     </ion-col>
     <ion-col class="order-header-col">
-      purchase price
+      Purchase price
     </ion-col>
   </ion-row>
 <div class="order-dis" *ngFor="let order of orders;let index = index ; trackBy:trackByIndex;">
@@ -45,13 +45,13 @@
     <p>table number</p>
   </ion-col>
   <ion-col>
-  <ion-input class="table-number" type="number" pattern="[0-9]*"  max="99"   placeholder="enter your input"></ion-input>
+  <ion-input class="table-number" type="number" pattern="[0-9]*"  max="99" [(ngModel)]="tableCode"  placeholder="enter your input"></ion-input>
   </ion-col>
   </ion-row>
   <div class="total-price">
   <ion-row>
   <ion-col>
-    total price :
+    Total Price :
   </ion-col>
   <ion-col>
     {{totalPrice}}
@@ -62,7 +62,7 @@
   <div *ngIf="paymentMethod == 61">
 <ion-row>
   <ion-col>
-    your balance now :
+    Your balance now :
   </ion-col>
   <ion-col>
     {{user.balanceMoney}}
@@ -70,7 +70,7 @@
   </ion-row>
 <ion-row>
 <ion-col>
-    your balance after purchase :
+    Your balance after purchase :
   </ion-col>
   <ion-col>
     {{user.balanceMoney - totalPrice }}
