--- a/newGizaClub/src/pages/regestration/regestration.html
+++ b/newGizaClub/src/pages/regestration/regestration.html
@@ -20,7 +20,7 @@
      <ion-icon name="mail" class="icon"></ion-icon>
     </ion-col>
     <ion-col >
-     <ion-input  type="text" name="phone" formControlName="phone" placeholder="enter you phone number"></ion-input>
+     <ion-input  type="tel" name="phone" formControlName="phone" placeholder="enter you phone number"></ion-input>
      <div *ngIf="regesterForm.controls['phone'].invalid && regesterBefore == true">
        enter valed phone
      </div>
