--- a/newGizaClub/src/pages/sports/sports.html
+++ b/newGizaClub/src/pages/sports/sports.html
@@ -6,19 +6,26 @@
 -->
 <ion-header>
 
-  <ngsc-header [name]='sport.title'></ngsc-header>
+  <ngsc-header [name]='sport.name'></ngsc-header>
 
 </ion-header>
 
 
 <ion-content padding>
-  <div *ngIf="sport.imageUrl">
-  <img class="round-img"[src]="sport.imageUrl">
+  <ion-row>
+    <ion-col>
+  <div *ngIf="sport.logo">
+  <img class="sport-logo"[src]="sport.logo">
   </div>
+    </ion-col>
+    <ion-col>
+        <button ion-button  class="sports-button" (tap)="open('sportRegesteration')" block>See training Groups</button>
+    </ion-col>
+  </ion-row>
   <div class="item-text-container">
   <p class="item-text">{{sport.description}}</p>
   </div>
   <div>
-     <button ion-button class="fp-Button" (click)="open()">Test Noifications layout </button>
+     <button ion-button class="fp-Button" (tap)="open('notification')">Test Noifications layout </button>
     </div>
 </ion-content>
