updated the  veiw

--- a/newGizaClub/src/pages/home/home.html
+++ b/newGizaClub/src/pages/home/home.html
@@ -2,6 +2,6 @@
 <ion-content padding>
 <ion-tabs>
   <ion-tab  [root]="main" tabTitle="main" tabIcon="home"></ion-tab>
-  <ion-tab [root]="news" tabTitle='news' tabIcon="home"></ion-tab>
+  <ion-tab [root]="news" tabTitle='news' tabIcon="paper"></ion-tab>
 </ion-tabs>
 </ion-content>
