--- a/newGizaClub/src/pages/sports/sports.html
+++ b/newGizaClub/src/pages/sports/sports.html
@@ -18,9 +18,11 @@
   <img class="sport-logo"[src]="sport.logo">
   </div>
     </ion-col>
-    <ion-col>
-        <button ion-button  class="sports-button" (tap)="open('sportRegesteration')" block>See training Groups</button>
-    </ion-col>
+  </ion-row>
+  <ion-row>
+      <ion-col>
+          <button ion-button  class="sports-button" (tap)="open('sportRegesteration')" block>Join</button>
+      </ion-col>
   </ion-row>
   <div class="item-text-container">
   <p class="item-text">{{sport.description}}</p>
