--- a/newGizaClub/src/pages/order/order.html
+++ b/newGizaClub/src/pages/order/order.html
@@ -9,7 +9,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding *ngIf="ready">
 <ion-row>
     <ion-col class="order-header-col">
       Item Name
