--- a/newGizaClub/src/pages/resturants/resturants.html
+++ b/newGizaClub/src/pages/resturants/resturants.html
@@ -38,7 +38,7 @@
   <ion-scroll scrollY="true" style="height: 100%;">
   <ion-list>
     <button ion-button (click)="order()" name="Order">Order</button>
-    <div *ngFor="let item of chossenResturant.products ; let index = index ; trackBy:trackByIndex;">
+    <div *ngFor="let item of choosenResturant.products ; let index = index ; trackBy:trackByIndex;">
     <ion-item >
           <ion-row class="item-header">
           
