--- a/newGizaClub/src/pages/resturantslist/resturantslist.html
+++ b/newGizaClub/src/pages/resturantslist/resturantslist.html
@@ -11,13 +11,12 @@
 
 <ion-content padding>
   <ion-list *ngIf="Ready">   
-    <ion-item *ngFor="let item of resturants">
+    <ion-item *ngFor="let item of resturants" (tap)="openPage(item)">
       <ion-thumbnail item-start>
         <img *ngIf="item.image" [src]="item.image">
         <img *ngIf="!item.image" src="assets/img/no-img.jpeg" >
       </ion-thumbnail>
       <h2>{{item.name}}</h2>
-      <button ion-button clear item-end (tap)="openPage(item)">View</button>
     </ion-item>
   </ion-list>
   
