--- a/newGizaClub/src/pages/sportslist/sportslist.html
+++ b/newGizaClub/src/pages/sportslist/sportslist.html
@@ -5,12 +5,11 @@
 
 <ion-content padding>
   <ion-list *ngIf="sportsReady">   
-  <ion-item *ngFor="let item of sports">
+  <ion-item *ngFor="let item of sports" (tap)="goTopage(item)">
     <ion-thumbnail item-start>
       <img [src]="item.logo">
     </ion-thumbnail>
     <h2>{{item.name}}</h2>
-    <button ion-button clear item-end (tap)="goTopage(item)">View</button>
   </ion-item>
 </ion-list>
 
