updates to the view

--- a/newGizaClub/src/pages/jointeam/jointeam.html
+++ b/newGizaClub/src/pages/jointeam/jointeam.html
@@ -37,8 +37,8 @@
   </div>
 
   <div class="join-team-div">
-    <ion-row>
-        <img class="round-img"src={{team.coach.image}}>
+    <ion-row  style="margin-bottom: 30px">
+        <img class="coach-img"src={{team.coach.image}}>
     </ion-row>
     <ion-row>
       <h6 class="coach-name">{{team.coach.name}}</h6>
