--- a/newGizaClub/src/pages/listsportdetails/listsportdetails.html
+++ b/newGizaClub/src/pages/listsportdetails/listsportdetails.html
@@ -18,8 +18,8 @@
       <ion-row>
         <ion-col class="sport-details-header">
           <h3>{{team.name}}</h3>
-
         </ion-col>
+        <ion-col class="sport-details-header"><button ion-button  class="sports-button" block>JOIN</button></ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
