--- a/newGizaClub/src/pages/sports/sports.html
+++ b/newGizaClub/src/pages/sports/sports.html
@@ -21,7 +21,7 @@
   </ion-row>
   <ion-row>
       <ion-col>
-          <button ion-button  class="sports-button" (tap)="open('sportRegesteration')" block>Join</button>
+          <button ion-button  class="sports-button" (tap)="open('sportRegesteration')" block>NEXT</button>
       </ion-col>
   </ion-row>
   <div class="item-text-container">
